tests/typing/fail/undef-01.stderr
error: Variable `hello` is undefined.
 --> tests/typing/fail/undef-01.rs:6:19
  |
6 |     node oui() = (hello)
  |                   ^^^^^
